--- a/index.html
+++ b/index.html
@@ -9,4 +9,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
+
+  <!-- Jivo Chat  -->
+  <script src="//code.jivosite.com/widget/weeSbuM7mF" async></script>
 </html>
